--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ cache: npm
 script: npm run build
 
 deploy:
- provider: pages
+ provider: heroku
  skip_cleanup: true
- api-key: $HEROKU_API_KEY
+ api_key: 
+  secure: $HEROKU_API_KEY
+ app: diagrama-influencia-obesidade
  local_dir: dist
  on:
-   branch: main
+    branch: main
